git: more details on personalization and staging

--- a/_posts/2018-01-25-04_Git_basics.md
+++ b/_posts/2018-01-25-04_Git_basics.md
@@ -55,10 +55,28 @@ the [other resources](#more).
 ### Configuring Git ###
 
 The first time you use `git` you need to tell it who you are: this
-information will be the user information in the commit history. (*Use
-your own name and email address!*)
-
+information will be the user information in the commit history. 
 #### Personalization
+
+Set your name and email. 
+
+Use a name and email address that can appear in the clear in the world
+because you will also use it to sign up and access the
+[GitHub](https://github.com/) web site; if you are concerned about
+privacy, please review [GitHub’s instructions for keeping your email
+address
+private](https://help.github.com/articles/keeping-your-email-address-private/). During
+this class we will use GitHub all the time:
+
+* Homework will be submitted to *private* git repositories (only
+  visible to you and the instructors).
+* Projects will be submitted to *private* repositories only visible to
+  you, your team, and the instructors.
+* The final project will be submitted to a *public* repository,
+  visible to everyone in the world.
+
+Set the name and email associated with your commits (*Use your own
+name and email address!*) (and how to color output):
 
 {% highlight bash %}
 git config --global user.name "Darth Vader"
@@ -66,20 +84,36 @@ git config --global user.email "dvader@empire.gov"
 git config --global color.ui "auto"
 {% endhighlight %}
 
+
+There are subtle differences between how Windows and Linux/macOS treat
+line endings, which matters for programming. [Without going into
+details](https://swcarpentry.github.io/git-novice/02-setup/), please
+set the following
+
+On **Windows**
+{% highlight bash %}
+git config --global core.autocrlf true
+{% endhighlight %}
+
+On **macOS** or **Linux**
+{% highlight bash %}
+git config --global core.autocrlf input
+{% endhighlight %}
+
+
+
 You can see a list of all your configuration settings with `git config
 --list`.
 
 #### Git Editor
 
-You also tell it how to color output and what editor to use to write
-commit messages [^1]. See [Associating text editors with
-Git](https://help.github.com/articles/associating-text-editors-with-git/)
-for details. 
+You also tell what editor to use to write commit messages [^1]; here
+we configure [atom to be used with git](https://help.github.com/articles/associating-text-editors-with-git/). 
 
 ##### Windows
 
 {% highlight bash %}
-# choose your favorite editor: Windows
+# choose atom as your editor: Windows
 "C:/Users/USERNAME/AppData/Local/atom/bin/atom.cmd"
 {% endhighlight %}
 
@@ -91,15 +125,18 @@ necessary.
 
 #####  macOS and Linux
 {% highlight bash %}
-# choose your favorite editor: Linux and Mac
+# choose atom as your editor: Linux and Mac
 git config --global core.editor "atom --wait"
 {% endhighlight %}
 
 
 #### `git` basic command syntax
 
-Git commands always follow the pattern `git <verb> [options]
-[arguments ...]`. In particular, `--help` is always an option. Also
+Git commands always follow the pattern 
+
+    git <verb> [options] [arguments ...]
+	
+In particular, `--help` is always an option. Also
 try `git help` and `git help tutorial`.
 
 
@@ -113,7 +150,7 @@ other folders and documents):
 ~/PHY494/
         01_shell/
         03_python/
-		         temperatures.py
+                 temperatures.py
                  temperatures2.py
                  heaviside.py
                  fibonacci.py
@@ -135,10 +172,11 @@ ls -la
 {% endhighlight %}
 
 A new hidden directory `~/PHY494/.git/` appeared. This is your actual
-repository where Git stores all its information. **Do not change
-anything in this directory** (unless you really know what you are
-doing) and **do not delete the `.git`** directory. If you delete it,
-your repository is irrevocably gone (and there is no undo for that!).
+repository (or database) where Git stores all its information. **Do
+not change anything in this directory** (unless you really know what
+you are doing) and **do not delete the `.git`** directory. If you
+delete it, your repository is irrevocably gone (and there is no undo
+for that!).
 
 Now try the (possibly) most-used git command:
 
@@ -175,15 +213,24 @@ add` adds files and directories to the *staging area*:
 
 
 {% highlight bash %}
-git add .
+git add 03_python
 git status
 {% endhighlight %}
+
+
+Add more files and directories:
+{% highlight bash %}
+git add 01_shell
+git status
+{% endhighlight %}
+
 
 (Use `git reset FILENAME` to unstage any files that you might have
 added accidentally. For instance, do not checking backup files created
 by your editor.)
 
-The files are not committed yet. You can do more work, add more files...
+The files are not committed yet. You can do more work, add more files
+and directories...
 
 
 ### Committing ###
@@ -449,7 +496,11 @@ just run the next `git pull` command again without problems.)
 [^1]:
 
      See also Software Carpentry's list of
-     [git configuration options for different editors](https://swcarpentry.github.io/git-novice/02-setup/).
+     [git configuration options for different
+	 editors](https://swcarpentry.github.io/git-novice/02-setup/) and 
+     [Associating text editors with
+     Git](https://help.github.com/articles/associating-text-editors-with-git/)
+     for details, especially for `atom`.
 
 	 For problems with setting up editors in Windows, see the
      StackOverflow question
