example commit message

--- a/_posts/2018-01-25-04_Git_basics.md
+++ b/_posts/2018-01-25-04_Git_basics.md
@@ -247,9 +247,20 @@ git commit
   The first line is mandatory (you cannot have a commit without a
   message), the rest is optional. *The commit message should
   succinctly summarize the changes in the commit.*
-* After you wrote and saved the message (in `nano`, `^O`; in `vim`,
-  `i` to write, `ESC :wq` to save and exit) and exited (`^X` in
-  `nano`), your changes will be committed to the repository.
+  
+  As an example, the following would make a good message:
+  
+  ~~~
+  initial commit of PHY494 class work
+  
+  * lesson 01 on shell
+  * lesson 03 on python
+  ~~~
+  
+* After you wrote and saved the message ("save" in `atom`, `^O` in
+  `nano`; `i` to write and `ESC :wq` to save and exit `vim`) and
+  exited ("quit" in `atom`, `^X` in `nano`), your changes will be
+  committed to the repository.
 * You can also supply the message as an argument: `git commit -m "one
   line summary of changes"`.
 * Check the status with `git status`...
