04 Git: fixed Windows editor config

--- a/_posts/2018-01-30-04_Git_basics.md
+++ b/_posts/2018-01-30-04_Git_basics.md
@@ -114,12 +114,13 @@ we configure [atom to be used with git](https://help.github.com/articles/associa
 
 {% highlight bash %}
 # choose atom as your editor: Windows
-"C:/Users/USERNAME/AppData/Local/atom/bin/atom.cmd"
+git config --global core.editor "C:/Users/USERNAME/AppData/Local/atom/bin/atom.cmd --wait"
 {% endhighlight %}
 
 where `USERNAME` should be your username. Double check that the path
 `/c/Users/USERNAME/AppData/Local/atom/bin/atom.cmd` really points to
-the `atom` command. Otherwise, add the correct path. Ask for help if
+the `atom` command. (You can try the command `which atom`, which might
+be show you the correct path on your computer.) Otherwise, add the correct path. Ask for help if
 necessary.
 
 
