07 Numbers: made sine series problem optional

--- a/_posts/2018-02-08-07_Numbers.md
+++ b/_posts/2018-02-08-07_Numbers.md
@@ -33,7 +33,7 @@ The class will be presented in a Jupyter notebook. The annotated
 notebook is
 [07-numbers.ipynb]({{site.nbviewer.resources}}/07_numbers/07-numbers.ipynb).
 
-#### Problem: Sine Series
+#### Problem: Sine Series (Optional)
 For one problem you should obtain the notebook
 [07-problem-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers/07-problem-sine-series.ipynb),
 which already contains part of the code you will need. `git pull` the
