note on np.float128

--- a/_posts/2018-02-08-07_Numbers.md
+++ b/_posts/2018-02-08-07_Numbers.md
@@ -79,7 +79,15 @@ will be made available later.)
 
      The Python `float` is a IEEE 754 *double*. NumPy has a wider
      range of numeric data types, including `float32` (like *float*),
-     `float64` (like *double*) and also `float128`.
+     `float64` (like *double*) and also `float128`, but the `float128`
+     [is not really a true 128-bit
+	 number](https://stackoverflow.com/a/17023995/); on typical x86
+	 machines, these are C `long double` which can provide up to 80
+	 bit precision (but *not* 128 bit), es explained in the NumPy docs
+	 on [extended
+	 precision](https://docs.scipy.org/doc/numpy/user/basics.types.html#extended-precision). 
+	 
+
 
 [^4]:
 
