updated PDE page

--- a/_posts/2018-04-05-14_PDEs.md
+++ b/_posts/2018-04-05-14_PDEs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 13 Partial Differential Equations (PDEs)
+title: 14 Partial Differential Equations (PDEs)
 ---
 
 Most physical phenomena are ultimately described by a relationship between changing quantities. If only a single quantity such as time is changing, [Ordinary Differential Equations]({{site.baseurl}}{% post_url 2018-02-20-10_ODEs %}) (ODEs) result. However, as soon as more than a single quantity varies independently from the other ones, [partial differential equations](http://mathworld.wolfram.com/PartialDifferentialEquation.html) (**PDEs**) have to be solved.
@@ -59,28 +59,28 @@ with the Gauss-Seidel algorithm.)
 <video width="350.0" height="350.0" controls autoplay loop>
 <source type="video/quicktime" src="{{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov" />
   Your browser does not support the video tag. You can find the video
-  file at {{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov .
+  file at [{{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov]({{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov) .
 </video>
 
 <video width="350.0" height="350.0" controls autoplay loop>
 <source type="video/quicktime" src="{{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov" />
   Your browser does not support the video tag. You can find the video
-  file at {{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov .
+  file at [{{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov]({{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov) .
 </video>
 
 
 ## Class material
 
-1. [13_PDEs-1.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1.ipynb):
+1. [14_PDEs-1.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-1.ipynb):
    Poisson's and Laplace's equation: Background
-   ([board notes on PDEs (PDF)]({{site.resources.fileurl}}/13_PDEs/13_PDEs-1-LectureNotes.pdf)),
+   ([board notes on PDEs (PDF)]({{site.resources.fileurl}}/14_PDEs/14_PDEs-1-LectureNotes.pdf)),
    Gauss-Seidel algorithm, problems:
-   [13_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-1-Students.ipynb)
-2. [13_PDEs-2.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-2.ipynb):
+   [14_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-1-Students.ipynb)
+2. [14_PDEs-2.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-2.ipynb):
    fast Jacobi, Gauss-Seidel and Successive Over Relaxation algorithms
    (using NumPy array operations, see
-   [board notes on numpyfied Poisson solvers (PDF)]({{site.resources.fileurl}}/13_PDEs/13_PDEs-2-LectureNotes.pdf)),
-   Poisson equation, charge density: [13_PDEs-2-Students.ipynb]({{site.nbviewer.resources}}/13_PDEs/13_PDEs-2-Students.ipynb)
+   [board notes on numpyfied Poisson solvers (PDF)]({{site.resources.fileurl}}/14_PDEs/14_PDEs-2-LectureNotes.pdf)),
+   Poisson equation, charge density: [14_PDEs-2-Students.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-2-Students.ipynb)
 
 
 #### Additional resources  ####
