added footnotes to PDEs

--- a/_posts/2018-04-05-14_PDEs.md
+++ b/_posts/2018-04-05-14_PDEs.md
@@ -71,16 +71,19 @@ with the Gauss-Seidel algorithm.)
 
 ## Class material
 
-1. [14_PDEs-1.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-1.ipynb):
+1. [14_PDEs-1.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-1.ipynb)
+   [^1]:
    Poisson's and Laplace's equation: Background
    ([board notes on PDEs (PDF)]({{site.resources.fileurl}}/14_PDEs/14_PDEs-1-LectureNotes.pdf)),
    Gauss-Seidel algorithm, problems:
-   [14_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-1-Students.ipynb)
-2. [14_PDEs-2.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-2.ipynb):
+   [14_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-1-Students.ipynb) [^2]
+2. [14_PDEs-2.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-2.ipynb)
+   [^1]:
    fast Jacobi, Gauss-Seidel and Successive Over Relaxation algorithms
    (using NumPy array operations, see
    [board notes on numpyfied Poisson solvers (PDF)]({{site.resources.fileurl}}/14_PDEs/14_PDEs-2-LectureNotes.pdf)),
-   Poisson equation, charge density: [14_PDEs-2-Students.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-2-Students.ipynb)
+   Poisson equation, charge density:
+   [14_PDEs-2-Students.ipynb]({{site.nbviewer.resources}}/14_PDEs/14_PDEs-2-Students.ipynb) [^2]
 
 
 #### Additional resources  ####
@@ -90,3 +93,20 @@ with the Gauss-Seidel algorithm.)
 * _[Numerical Recipes in C](http://apps.nrbook.com/c/index.html)_, WH
   Press, SA Teukolsky, WT Vetterling, BP Flannery. 2nd
   ed, 2002. Cambridge University Press. Chapter **19**.
+
+
+--------
+
+#### Footnotes
+
+[^1]:
+
+     Notebook will be posted after class; in the mean time look at the
+     student notebook.
+
+[^2]:
+
+     As usual, `git pull` the resources repository
+     [{{site.resources.shortname}}]({{site.resources.url}}) to get a
+     local copy of the notebook. Then **copy the notebook and all other
+     code into your work directory** in order to complete the exercises.
