--- a/_posts/2019-01-10-01_Unix_Shell.md
+++ b/_posts/2019-01-10-01_Unix_Shell.md
@@ -8,11 +8,11 @@ line**. There are many different shells: We are using the
 **[bash](https://en.wikipedia.org/wiki/Bash_(Unix_shell))** shell.
 
 This lesson builds on [An Introduction to the command
-line](http://becksteinlab.physics.asu.edu/learning/24/introduction-to-the-command-line)
+line](https://becksteinlab.physics.asu.edu/learning/24/introduction-to-the-command-line)
 with [Unix
-Basics](http://becksteinlab.physics.asu.edu/pages/unix/IntroUnix/p01_UNIX.html)
+Basics](https://becksteinlab.physics.asu.edu/pages/unix/IntroUnix/p01_UNIX.html)
 and the [Software Carpentry lesson on The Unix
-Shell](http://swcarpentry.github.io/shell-novice/).
+Shell](https://swcarpentry.github.io/shell-novice/).
 
 1. [Background and Motivation](#background-and-motivation)
 2. [Introductory Shell Tutorial](#introductory-shell-tutorial) on basic shell usage
@@ -522,7 +522,7 @@ today, this is optional, but you are encouraged to do it.
 ## Intermediate Level ##
 
 The following is very useful but for right now not essential and is
-optional. You can work through the tutorial in your own time.
+*optional*. You can work through the tutorial in your own time.
 
 ### Pipes and Filters ###
 
