02 first program and python
- updated 2018 page
- added more activities

--- a/_posts/2019-01-15-02_HelloWorld.md
+++ b/_posts/2019-01-15-02_HelloWorld.md
@@ -13,7 +13,7 @@ cd ~/PHY494/02_python
 
 ## Hello World ##
 
-Using you favorite editor, create a text file named `hello.py` in the
+Using you favorite editor (for instance, `atom`), create a text file named `hello.py` in the
 directory `~/PHY494/02_python`[^1] with the
 following content:
 
@@ -50,16 +50,98 @@ You should see something like
 
 The Python prompt is `>>>`.
 
-Type commands and execute them with Enter.
+Type commands and execute them with `Enter`. Like the shell, Python is
+a *REPL*, a "Read-eval-print-loop". For example, to add two numbers
 
-Like the shell, Python is a *REPL*, a "Read-eval-print-loop".
+{% highlight python %}
+>>> 41 + 1
+42
+>>> 1.5 + 5e-1
+2.0
+{% endhighlight %}
+
+Exit with `quit()` or `Ctrl + d`.
+
+### Help! ###
+In Python you can often get _help_ by saying
+{% highlight python %}
+>>> help()
+>>> help("something")
+{% endhighlight %}
+
+For example, get help on the addition operator (and much more):
+
+{% highlight python %}
+>>> help("+")
+{% endhighlight %}
+
+
+
+### Activity: Python as a calculator ###
+Start `python` and figure out [^2] how to compute the left hand sides (the
+right hand sides are there for you to check your results):
+
+\begin{align}
+-1 + 2 &= -1\\\
+102 - 201 &= -99\\\
+12345678987654321 \times 9876543210123456789 &= 121932631979881115785550983112635269\\\
+3/2 &= 1.5\\\
+\frac{1}{1 - 0.9^2} &= 5.263157894736843\\\
+1 + \frac{2}{1} + \frac{2^2}{1\cdot2} + \frac{2^3}{1\cdot2\cdot3} +
+\frac{2^4}{1 \cdot 2\cdot3\cdot4} &= 7.0\\\
+-3^4 &= 81\\\
+2 - 5.5\times 10^{-7} &= 1.99999945\\\
+1.672621898\times 10^{-27} \times (3\times10^8)^2 &= 1.5053597082 \times 10^{-10}\\\
+\sqrt{2} &= 1.4142135623730951\\\
+\sqrt{-1} &= i\\\
+(1 + 2i) + (-2 + i) &= -1 + 3i\\\
+\frac{1 + 2i}{2 - i} &= i\\\
+\end{align}
+
+### More operations
+
+- floor division ("integer division") `//` [^5]
+- remainder `%`
+
+{% highlight python %}
+>>> 13 / 3  # division returns a float
+4.333333333333333
+>>> 13 // 3  # floor division discards the fractional part
+4
+>>> 13 % 3  # the % operator returns the remainder of the division
+1
+>>> 4 * 3 + 1  # result * divisor + remainder
+13
+{% endhighlight %}
+
+### Potential problems...
+
+Division by zero _raises an error_ (an "exception"):
+{% highlight python %}
+>>> 1/0
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ZeroDivisionError: division by zero
+{% endhighlight %}
+
+Floating point numbers are not real real numbers (more later):
+calculating
+$$
+10 + 10^{-16} = 10.0000000000000001
+$$
+in Python
+
+{% highlight python %}
+>>> 10 + 1e-16
+10.0
+{% endhighlight %}
+does not give the expected answer!
+
 
 ### Activity: hello, line by line ###
 
 Type the commands from `hello.py` into the interpreter, hitting Enter
 after every line, and execute your program step by step.
-
-Exit with `quit()` or `Ctrl + d`
 
 ## Basic plotting ##
 
@@ -94,7 +176,7 @@ plt.show()
 
 You should create a graph similar to the following:
 
-![Constant accelleration plot]({{site.baseurl}}/{{site.figs}}/motion.png)
+![Constant acceleration plot]({{site.baseurl}}/{{site.figs}}/motion.png)
 
 ## Interactive Python with `ipython` ##
 
@@ -134,7 +216,7 @@ Just use `ipython` instead of `python` for interactive work.
 * Use `command?` or `?command` (question mark directly before or after
   a command or object) to get help
 * `%run FILE` executes FILE similarly to `python
-  FILE`.[^2]
+  FILE`.[^3]
 
 
 ### `ipython` with `matplotlib`
@@ -143,17 +225,17 @@ In the basic plotting example we used the `matplotlib` library for
 plotting and wrote a figure to a file. `ipython` can show figures
 interactively but the details depend on your operating system and
 installed packages. Try the following and see if the figure is
-displayed on your screen when you run `motion.py`:
+displayed on your screen when you run `motion.py`: [^4]
 
 #### Windows
 
-Run `ipython qtconsole` to show graphics inline:[^3]
+Run `ipython qtconsole` to show graphics inline:
 
 {% highlight bash %}
 ipython qtconsole
 {% endhighlight %}
 
-In `ipython`
+In `ipython` [^3]
 {% highlight python %}
 %run motion.py
 {% endhighlight %}
@@ -171,7 +253,7 @@ ipython --matplotlib=osx
 {% endhighlight %}
 
 
-In `ipython`
+In `ipython` [^3]
 {% highlight python %}
 %run motion.py
 {% endhighlight %}
@@ -188,7 +270,7 @@ ipython --matplotlib=gtk3
 `--matplotlib`.)
 
 
-In `ipython`
+In `ipython` [^3]
 {% highlight python %}
 %run motion.py
 {% endhighlight %}
@@ -234,19 +316,23 @@ In `ipython`
     the shell, make sure that the file is in place where you expect it
     to be, i.e., `ls -la`.)
 
-[^2]:
+[^2]: 
+    
+	If you need [help](#help), look at [Using Python as a
+	Calculator](https://docs.python.org/3/tutorial/introduction.html#using-python-as-a-calculator)
+    in the standard Python Tutorial.
+	
+[^3]:
 
     `%run` is an ipython "magic" command, see help on those commands
     with `%magic`.
 
-[^3]:
+[^4]:
 
     If you don't want to see graphics inline but as a separate window
     you can try
 	
-	{% highlight bash %}
-    ipython --matplotlib=qt5
-    {% endhighlight %}
+		ipython --matplotlib=qt5
     
     (If `qt5` does not work, try `qt`, `wx`, `tk`, `auto`, or just
     `--matplotlib`.)
@@ -254,5 +340,13 @@ In `ipython`
 	However, this does not always work and might require additional
 	packages. Please share any insights and solutions!
 	
-	 
+[^5]:
+
+    In Python 2, the `/` division operator would perform floor
+	division _if both operands were integers_ but normal ("true") division if
+    at least one operand was a floating point number. Therefore, in
+    old Python 2 code you might see constructs such as `1.0 * a / 2`
+    to force a true division, no matter the value of the variable
+	`a`. In Python 3, the `/` operator _always_ 
+    performs true division, which prevents some rather nasty bugs from occuring.
 	
