more explanation for Hello.py

--- a/_posts/2019-01-15-02_HelloWorld.md
+++ b/_posts/2019-01-15-02_HelloWorld.md
@@ -30,6 +30,18 @@ Execute ("run") your `hello.py` program with the `python` program:
 python hello.py
 {% endhighlight %}
 
+It should ask you for your name: type it and hit `Enter`. You should
+be greeted nicely with a message on your screen.
+
+- The line starting with `#` is a comment and Python ignores
+  everything on the line starting with the comment character.
+- Blank lines are ignored.
+- `name` is a _variable_: it stores a value (more later); variable names are arbitrary (as
+  long as you only use letters, numbers, underscore, don't start with
+  a number, and don't use a name that is already used by Python)
+- `input()` and `print()` are _functions_: they take values as input
+  and do something with it (more later).
+
 ## Python interpreter ##
 
 [Python](https://www.python.org/) is an interpreted language; you can
@@ -140,7 +152,7 @@ does not give the expected answer!
 
 ### Activity: hello, line by line ###
 
-Type the commands from `hello.py` into the interpreter, hitting Enter
+Type the commands from `hello.py` into the interpreter, hitting `Enter`
 after every line, and execute your program step by step.
 
 ## Basic plotting ##
