--- a/_drafts/2019-01-17-03_Git_basics.md
+++ b/_drafts/2019-01-17-03_Git_basics.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  04 Git Basics
+title:  03 Git Basics
 ---
 
 This is a short introduction to one of the most essential tools in
@@ -120,7 +120,7 @@ git config --global core.editor "C:/Users/USERNAME/AppData/Local/atom/bin/atom.c
 where `USERNAME` should be your username. Double check that the path
 `/c/Users/USERNAME/AppData/Local/atom/bin/atom.cmd` really points to
 the `atom` command. (You can try the command `which atom`, which might
-be show you the correct path on your computer.) Otherwise, add the correct path. Ask for help if
+show you the correct path on your computer.) Otherwise, add the correct path. Ask for help if
 necessary.
 
 
@@ -150,13 +150,9 @@ other folders and documents):
 ~~~
 ~/PHY494/
         01_shell/
-        03_python/
-                 temperatures.py
-                 temperatures2.py
-                 heaviside.py
-                 fibonacci.py
-                 countup.py
-                 step_function.py
+        02_python/
+             hello.py
+             motion.py
 ~~~
 
 Turn the `PHY494` directory into **repository** with the `git init` command:
@@ -214,7 +210,7 @@ add` adds files and directories to the *staging area*:
 
 
 {% highlight bash %}
-git add 03_python
+git add 02_python
 git status
 {% endhighlight %}
 
@@ -255,7 +251,7 @@ git commit
   initial commit of PHY494 class work
   
   * lesson 01 on shell
-  * lesson 03 on python
+  * lesson 02 on python
   ~~~
   
 * After you wrote and saved the message ("save" in `atom`, `^O` in
