links to more notebooks for 16 PDEs

--- a/_posts/2019-04-11-16_PDEs.md
+++ b/_posts/2019-04-11-16_PDEs.md
@@ -69,6 +69,7 @@ with the Gauss-Seidel algorithm.)
 </video>
 
 
+
 ## Class material
 
 1. [16_PDEs-1.ipynb]({{site.nbviewer.resources}}/16_PDEs/16_PDEs-1.ipynb)
@@ -81,9 +82,20 @@ with the Gauss-Seidel algorithm.)
    [^1]:
    fast Jacobi, Gauss-Seidel and Successive Over Relaxation algorithms
    (using NumPy array operations, see
-   [board notes on numpyfied Poisson solvers (PDF)]({{site.resources.fileurl}}/16_PDEs/16_PDEs-2-LectureNotes.pdf)),
+   [board notes on numpyfied Poisson solvers
+   (PDF)]({{site.resources.fileurl}}/16_PDEs/16_PDEs-2-LectureNotes.pdf))
+   and how to replace slow Python loops with fastnumpy array
+   operations ([numpy_arrays.ipynb]({{site.nbviewer.resources}}/16_PDEs/numpy_arrays.ipynb)),
    Poisson equation, charge density:
    [16_PDEs-2-Students.ipynb]({{site.nbviewer.resources}}/16_PDEs/16_PDEs-2-Students.ipynb) [^2]
+3. When plotting arrays of data with
+   [matplotlib](https://matplotlib.org), one sooner or later one needs
+   to use the
+   [`numpy.meshgrid()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.meshgrid.html)
+   function which "returns coordinate matrices from coordinate
+   vectors"---most users find this function mystifying. The notebook
+   [meshgrid.ipynb]({{site.nbviewer.resources}}/16_PDEs/meshgrid.ipynb)
+   makes a bit clearer, _what_ `meshgrid` does and why it is useful.
 
 
 #### Additional resources  ####
