summary --- end of 2019 class

--- a/_posts/2019-05-06-Summary.md
+++ b/_posts/2019-05-06-Summary.md
@@ -13,15 +13,14 @@ will allow them to solve problems on their own.
 # Overview over the course
 
 * If you just came here, have a look at the
-  [Overview]({{site.baseurl}}/overview/).
-* The [final projects]({{site.baseurl}}/{% post_url
-  2018-05-03-Final_Symposium %}) provide a sense for the breadth of
+  [Overview]({{ site.baseurl }}/overview/).
+* The [final projects]({{ site.baseurl }}{% post_url
+  2019-05-02-Final_Symposium %}) provide a sense for the breadth of
   problems that students addressed.
 * If you are interested in taking the class at Arizona State
   University, go to the
-  [ASU PHY494 Course
-  Page](https://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics);
-  note that in 2019 this class will have the PHY444 number.
+  [ASU PHY494 Course Page](https://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics);
+  note that in 2020 this class will have the PHY 432 number.
 
-![ASU PHY 494]({{site.baseurl}}/{{site.figs}}/phy494logo.png)
+![ASU PHY 494]({{ site.baseurl }}/{{ site.figs }}/phy494logo.png)
 
