footnote on tree command

--- a/_posts/2020-01-16-01_Unix_Shell.md
+++ b/_posts/2020-01-16-01_Unix_Shell.md
@@ -150,7 +150,7 @@ Special directory names:
 #### Location in the files system: `pwd` ####
 
 Assume user dvader has the following directory layout in his *home
-directory* `/home/dvader`:
+directory* `/home/dvader` [^0]:
 
 ~~~
 /home/dvader/
@@ -808,6 +808,23 @@ Updated resources in /Users/oliver/PHY494-resources
 ------------------------------------------------------------
 
 ##### Footnotes #####
+
+[^0]:
+
+    You can also see if you have the `tree` command installed, which
+	shows you beautiful directory trees:
+	
+	    $ tree ~dvader
+		/home/dvader/
+		├── Documents
+		│   ├── deathstar
+		│   │   ├── electrical_bill.dat
+		│   │   └── weaknesses.txt
+		│   └── work
+		└── data
+			├── bases
+			└── planets.dat
+
 
 [^1]:
 
