link to troubleshooting wiki for when atom cannot be launched from git-bash

--- a/_posts/2020-01-16-01_Unix_Shell.md
+++ b/_posts/2020-01-16-01_Unix_Shell.md
@@ -385,7 +385,7 @@ Note:
 
 #### Creating text files with a text editor ####
 
-Run `atom`: 
+Run `atom` by either launching it from a menu or from the commandline [^4]
 {% highlight bash %}
 atom
 {% endhighlight %}
@@ -432,11 +432,14 @@ We will now create a TODO list in a file with name `TODO` and content
 5. Check that the file is in the directory with `ls`.
 
 
-You can re-open the file from the command line:
+You can re-open the file from the command line [^4]:
 
 {% highlight bash %}
 atom TODO
 {% endhighlight %}
+
+(Alternatively, open atom from your GUI and find the file `TODO` through the *File*
+→ *Open* dialog.)
 
 
 ##### Activity: create a file with your editor #####
@@ -811,7 +814,7 @@ Updated resources in /Users/oliver/PHY494-resources
 
 [^0]:
 
-    You can also see if you have the `tree` command installed, which
+    You can also see if you have the [`tree`](https://manpages.debian.org/stretch/tree/tree.1.en.html) command installed, which
 	shows you beautiful directory trees:
 	
 	    $ tree ~dvader
@@ -824,6 +827,8 @@ Updated resources in /Users/oliver/PHY494-resources
 		└── data
 			├── bases
 			└── planets.dat
+    			
+    `tree` is typically *not* included with git-bash.
 
 
 [^1]:
@@ -857,3 +862,9 @@ Updated resources in /Users/oliver/PHY494-resources
 	[PHY494-auxilliary/star_wars](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-auxilliary/tree/master/star_wars)
 	for Python code to pull the data from SWAPI.
 
+[^4]:
+
+    If you cannot start `atom` from the commandline, go back to
+	[Setting up the Environment: Testing: editor (atom)]({{site.baseurl}}/{%post_url
+    2020-01-13-00_Setting_up_the_environment%}#from-the-shell) and follow
+    the steps described there.
