--- a/_posts/2020-01-21-02_HelloWorld.md
+++ b/_posts/2020-01-21-02_HelloWorld.md
@@ -41,6 +41,18 @@ be greeted nicely with a message on your screen.
   a number, and don't use a name that is already used by Python)
 - `input()` and `print()` are _functions_: they take values as input
   and do something with it (more later).
+  
+### What's a Python program?
+
+* A text file with content that follows the [rules of the Python
+  programming
+  language](https://docs.python.org/3/reference/index.html).
+  
+  Customarily, we add the suffix `.py` to the filename, but this is
+  not required.
+* The text file is read by the `python` interpreter (a program) and
+  executed.
+  
 
 ## Python interpreter ##
 
@@ -54,10 +66,10 @@ python
 
 You should see something like
 
-	 Python 3.5.3 |Anaconda custom (x86_64)| (default, Mar  6 2017, 12:15:08)
-	 [GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.57)] on darwin
-	 Type "help", "copyright", "credits" or "license" for more information.
-	 >>>
+	Python 3.6.8 |Anaconda, Inc.| (default, Dec 29 2018, 19:04:46)
+	[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
+	Type "help", "copyright", "credits" or "license" for more information.
+	>>>
 
 
 The Python prompt is `>>>`.
@@ -208,16 +220,17 @@ ipython
 It should look like
 
 ~~~~~
-Python 3.5.3 |Anaconda custom (x86_64)| (default, Mar  6 2017, 12:15:08)
+Python 3.6.8 |Anaconda, Inc.| (default, Dec 29 2018, 19:04:46)
 Type 'copyright', 'credits' or 'license' for more information
-IPython 6.1.0 -- An enhanced Interactive Python. Type '?' for help.
+IPython 7.3.0 -- An enhanced Interactive Python. Type '?' for help.
 
 In [1]:
 ~~~~~
 
 where `In [1]:` is the prompt.
 
-Just use `ipython` instead of `python` for interactive work.
+Use `ipython` instead of `python` for interactive work because it is
+much more userfriendly.
 
 ### `ipython` basics
 
