updated links in 03 Git

--- a/_posts/2020-01-23-03_Git_basics.md
+++ b/_posts/2020-01-23-03_Git_basics.md
@@ -5,7 +5,7 @@ title:  03 Git Basics
 
 This is a short introduction to one of the most essential tools in
 software development: a
-[version control system](https://swcarpentry.github.io/git-novice/reference/#version-control)
+[version control system](https://swcarpentry.github.io/git-novice/reference#version-control)
 and in particular the [Git](https://git-scm.com/) tool.[^0]
 
 A **version control system** (VCS) manages files and tracks changes to
@@ -31,9 +31,9 @@ multiple developers to work on the same project. They have support for
 **merging changes** from different people into a single new file, and
 for **resolving conflicts**, i.e., the case when the same part of a
 file was changed (the changes "collided"). Online platforms such as
-[GitHub](https://github.com) or [Bitbucket](https://bitbucket.org/)
-provide free repositories in the cloud (but you don't need these
-platforms to use a VCS!).
+[GitHub](https://github.com), [Bitbucket](https://bitbucket.org/), or
+[GitLab](https://gitlab.com/explore) provide free repositories in the
+cloud (but you don't need these platforms to use a VCS!).
 
 We will use [Git](https://git-scm.com/). For the class you should get
 into the habit to version-control your work: in class notes, home
@@ -471,11 +471,10 @@ just run the next `git pull` command again without problems.)
 ## More... ##
 
 * For a longer introductory tutorial see the Software Carpentry lesson on
-  [Version Control with Git](http://swcarpentry.github.io/git-novice/).
-* Interactive in-browser lesson [Try Git](http://try.github.com/),
-  takes 15 minutes.
+  [Version Control with Git](https://swcarpentry.github.io/git-novice/).
+* [Resources to learn Git](https://try.github.io/), including cheat sheets.
 * Blischak JD, Davenport ER, Wilson G
-  (2016). [A Quick Introduction to Version Control with Git and GitHub](http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004668). PLoS
+  (2016). [A Quick Introduction to Version Control with Git and GitHub](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004668). PLoS
   Comput Biol 12(1): e1004668. doi:10.1371/journal.pcbi.1004668 
 * For in-depth discussion read the
   [Pro Git](https://git-scm.com/book/) book by Scott Chacon and Ben
@@ -489,7 +488,7 @@ just run the next `git pull` command again without problems.)
 
      Acknowledgements: This lesson uses ideas from Software
      Carpentry's
-     [Version Control with Git](http://swcarpentry.github.io/git-novice/)
+     [Version Control with Git](https://swcarpentry.github.io/git-novice/)
      and includes an image from Jorge Cham's
      [PhD Comics](http://www.phdcomics.com/)
      ["FINAL".doc](http://www.phdcomics.com/comics.php?n=1531) (which
@@ -512,7 +511,7 @@ just run the next `git pull` command again without problems.)
 
 	 For problems with setting up editors in Windows, see the
      StackOverflow question
-     [How can I set up an editor to work with Git on Windows?](http://stackoverflow.com/questions/10564/how-can-i-set-up-an-editor-to-work-with-git-on-windows)
+     [How can I set up an editor to work with Git on Windows?](https://stackoverflow.com/questions/10564/how-can-i-set-up-an-editor-to-work-with-git-on-windows)
      as a starting point for various recipes.
 	 
 [^2]:
