note on Final project

--- a/_posts/2020-01-23-03_Git_basics.md
+++ b/_posts/2020-01-23-03_Git_basics.md
@@ -72,8 +72,8 @@ this class we will use GitHub all the time:
   visible to you and the instructors).
 * Projects will be submitted to *private* repositories only visible to
   you, your team, and the instructors.
-* The final project will be submitted to a *public* repository,
-  visible to everyone in the world.
+* The final project can be submitted to a *public* repository,
+  visible to everyone in the world (e.g., to use it as part of a portfolio)
 
 Set the name and email associated with your commits (*Use your own
 name and email address!*) (and how to color output):
