gnew GH repo: do not add initial files

--- a/_posts/2020-01-23-03_Git_basics.md
+++ b/_posts/2020-01-23-03_Git_basics.md
@@ -369,7 +369,8 @@ includes
 1. Go to <https://github.com> and create a new account. It is
    free.[^2] Remember your
    GitHub **username** and the **password**.
-2. Create a new repository *PHY494*.
+2. Create a new repository *PHY494* (do not initialize it with a
+   README or other file)
 3. Note the repository URL
    https://github.com/USERNAME/PHY494.git
 4. Add the remote repository to your local repository `~/PHY494`
