footnote on GitHub education

--- a/_posts/2020-01-23-03_Git_basics.md
+++ b/_posts/2020-01-23-03_Git_basics.md
@@ -520,9 +520,11 @@ just run the next `git pull` command again without problems.)
      An unlimited number of *public* (i.e., visible for everyone)
      repositories are free on GitHub but private repositories cost
      money. However, if you use your school email address
-     (e.g. @asu.edu) you can get a limited number of private
-     repositories for free(?) through the
-     [GitHub educational discount](https://help.github.com/articles/discounted-private-accounts/).
+     (e.g. @asu.edu) you can also get private
+     repositories for free through the
+     [GitHub educational
+    discount](https://help.github.com/en/github/setting-up-and-managing-billing-and-payments-on-github/discounted-subscriptions-for-github-accounts);
+    see also the [GitHub Education](https://education.github.com/) site.
 	 
 [^3]:
 
