--- a/_posts/2020-02-11-05_Debugging.md
+++ b/_posts/2020-02-11-05_Debugging.md
@@ -57,10 +57,9 @@ but you have to do it --- code that produces wrong results is useless.
 
 ## Activity: Fix as many bugs as possible!
 
-Code for the examples below is in the
-[PHY494-resources repository]({{site.baseurl}}{% post_url
-2019-01-17-03_Git_basics %}#class-resources-on-github): Pull in the
-latest updates
+Code for the examples below is in the [PHY494-resources
+repository]({{site.baseurl}}{% post_url 2020-01-23-03_Git_basics
+%}#class-resources-on-github): Pull in the latest updates
 
 {% highlight bash %}
 cd ~/PHY494-resources
@@ -213,7 +212,8 @@ print(values)
 ## More resources
 
 * Software Carpentry's lesson on
-  [Errors and Exceptions](http://swcarpentry.github.io/python-novice-inflammation/07-errors/)
+  [Errors and Exceptions](http://swcarpentry.github.io/python-novice-inflammation/09-errors/)
+  and [Debugging](http://swcarpentry.github.io/python-novice-inflammation/11-debugging/)
 * [Testing](http://katyhuff.github.io/python-testing/) by Katy Huff
 * [Scipy lecture notes: Debugging](http://www.scipy-lectures.org/advanced/debugging/)
   by Gaël Varoquaux (advanced level)
