--- a/_posts/2020-02-27-10_ODEs.md
+++ b/_posts/2020-02-27-10_ODEs.md
@@ -87,8 +87,8 @@ In class we developed a simple simulation for free fall and for the
 bouncing ball.
 
 * [bounce_ball_numpy.ipynb]({{site.nbviewer.resources}}/10_ODEs/bounce_ball_numpy.ipynb):
-  simulation and graphing with [matplotlib](http://matplotlib.org)
-* [bounce_ball_visual.ipynb]({{site.nbviewer.resources}}/10_ODEs/bounce_ball_visual.ipynb):
+  simulation and graphing with [matplotlib](https://matplotlib.org)
+* optional: [bounce_ball_visual.ipynb]({{site.nbviewer.resources}}/10_ODEs/bounce_ball_visual.ipynb):
   visualization with [vpython](http://vpython.org) inside the Jupyter
   notebook using [vpython-jupyter](https://github.com/BruceSherwood/vpython-jupyter)
 
@@ -145,12 +145,12 @@ term stability.
 
 * _Computational Modelling_: Chapter **2**
 * _Computational Physics_: Chapter **9**
-* [scipy.integrate](http://docs.scipy.org/doc/scipy/reference/integrate.html)
+* [scipy.integrate](https://docs.scipy.org/doc/scipy/reference/integrate.html)
   for high performance integration algorithms for Python, in
   particular see
-  [scipy.integrate.odeint()](http://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.odeint.html)
+  [scipy.integrate.odeint()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.odeint.html)
   and
-  [scipy.integrate.ode()](http://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.ode.html#scipy.integrate.ode).
+  [scipy.integrate.ode()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.ode.html#scipy.integrate.ode).
 *  Weisstein, Eric
   W. ["Ordinary Differential Equation."](http://mathworld.wolfram.com/OrdinaryDifferentialEquation.html)
   From MathWorld — A Wolfram Web Resource.
