--- a/_posts/2020-04-28-17_PDEs_waves.md
+++ b/_posts/2020-04-28-17_PDEs_waves.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "18 PDEs: Wave equation"
+title: "17 PDEs: Wave equation"
 ---
 
 The wave equation is a hyperbolic
-[partial differential equations (PDEs)]({{site.baseurl}}{% post_url
-2019-04-11-16_PDEs %}) which describes the displacement $$y(x,t)$$ as
+[partial differential equation (PDE)]({{site.baseurl}}{% post_url
+2020-04-14-15_PDEs %}) which describes the displacement $$y(x,t)$$ as
 a function of position and time. The 1D linear wave equation is
 
 $$
@@ -803,7 +803,7 @@ and solve the spatial component for increasing times $$t = \Delta t,
 2\Delta t, 3\Delta t, \dots$$ using an explicit method such as
 the *Leapfrog algorithm*, similar to the
 [solution for the heat equation]({{site.baseurl}}{% post_url
-2019-04-18-17_PDEs_Time_Stepping %}).
+2020-04-21-16_PDEs_Time_Stepping %}).
 
 For example, in the 2D case, the  finite difference approximation for
 the Laplace operator is
@@ -22205,9 +22205,9 @@ In the 2D case, the Courant condition is $$c \le \frac{1}{\sqrt{2}}
 ## Class material
 
 * Student notebook: [^1]: Leap-frog method for the wave equation and von Neumann stability
-    analysis: [18_PDEs_waves-students.ipynb]({{site.nbviewer.resources}}/18_PDEs_waves/18_PDEs_waves-students.ipynb)
-* Lecture notebooks [^2] (correspond to the student notebooks):[18_PDEs_waves.ipynb]({{site.nbviewer.resources}}/18_PDEs_waves/18_PDEs_waves.ipynb).
-* Lecture notebook for 2D waves: [18_PDEs_2D_waves.ipynb]({{site.nbviewer.resources}}/18_PDEs_waves/18_PDEs_2D_waves.ipynb)
+    analysis: [17_PDEs_waves-students.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_waves-students.ipynb)
+* Lecture notebooks [^2] (correspond to the student notebooks):[17_PDEs_waves.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_waves.ipynb).
+* Lecture notebook for 2D waves: [17_PDEs_2D_waves.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_2D_waves.ipynb)
 
 
 #### Additional resources  ####
